unpackaged/main/default/objects/NPS_Response__c/NPS_Response__c.object-meta.xml
<CustomObject>
    <description>GetFeedback responses to Net Promoter Score survey</description>
    <label>NPS Response</label>
    <nameField>
        <label>NPS Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>