unpackaged/main/default/objects/NPS_Response__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>NPS Responses</relationshipLabel>
    <relationshipName>NPS_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>