unpackaged/main/default/objects/NPS_Response__c/fields/Dislikes__c.field-meta.xml
<CustomField>
    <fullName>Dislikes__c</fullName>
    <label>Dislikes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>