unpackaged/main/default/objects/NPS_Response__c/fields/Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Experience_Rating__c</fullName>
    <description>0 - 100 for Get Feedback Slider</description>
    <inlineHelpText>0 - 100 for Get Feedback Slider</inlineHelpText>
    <label>Experience Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>