unpackaged/main/default/objects/NPS_Response__c/fields/Likes__c.field-meta.xml
<CustomField>
    <fullName>Likes__c</fullName>
    <label>Likes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>