unpackaged/main/default/objects/NPS_Response__c/fields/NPS_Comment__c.field-meta.xml
<CustomField>
    <fullName>NPS_Comment__c</fullName>
    <label>Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>