unpackaged/main/default/objects/NPS_Response__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <formula>IF(NPS_Score__c &gt; 8, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>