unpackaged/main/default/objects/NPS_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Contact__c</columns>
    <columns>NPS_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NPS_Comment__c</columns>
    <columns>NPS_Score_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>