unpackaged/main/default/objects/NPS_Response__c/listViews/CloudSaaS.listView-meta.xml
<ListView>
    <fullName>CloudSaaS</fullName>
    <columns>Campaign__c</columns>
    <columns>Account__c</columns>
    <columns>NPS_Score__c</columns>
    <columns>NPS_Score_Indicator__c</columns>
    <columns>Likes__c</columns>
    <columns>Contact__c</columns>
    <columns>Dislikes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>cloud/saas</value>
    </filters>
    <label>CloudSaaS</label>
</ListView>